--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.2.1",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.12",
     "nodemon": "^3.1.0",
     "word-count": "^0.2.2"
   }
