--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -13,6 +13,7 @@
     "chart.js": "^4.4.2",
     "concurrently": "^8.2.2",
     "express": "^4.18.3",
+    "helmet": "^7.1.0",
     "moment": "^2.30.1",
     "mongoose": "^8.2.1",
     "multer": "^1.4.5-lts.1",
