--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "concurrently": "^8.2.2",
+    "cors": "^2.8.5",
     "express": "^4.18.3",
     "helmet": "^7.1.0",
     "moment": "^2.30.1",
